--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - 46:c2:72:91:9d:0e:2d:3c:93:d6:6c:12:31:df:8e:db
-      - run:
+      # - run:
           # name: Run Ironabnk Unit Tests
           # command: |
           #   if [[ ! $(which pyenv) ]] && [[ -n "${CIRCLECI}" ]]; then 
