--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: Build Docker Images
           command: |
-            ./docker/build_docker.sh
+            REVISION=<< pipline.number >> ./docker/build_docker.sh
           no_output_timeout: 60m
       - store_artifacts:
           path: artifacts
@@ -76,15 +76,15 @@ jobs:
       - run:
           name: Build Docker Images
           command: |
-            ./docker/build_docker.sh
+            REVISION=<< pipline.number >> ./docker/build_docker.sh
           no_output_timeout: 60m
       - store_artifacts:
           path: artifacts
           destination: docker_images
-      - run:
-          name: Build Ironbank Docker Images
-          command: |
-            pipenv run ./ironbank/build_ironbank_docker.sh --python 3.9
+      # - run:
+      #     name: Build Ironbank Docker Images
+      #     command: |
+      #       pipenv run ./ironbank/build_ironbank_docker.sh --python 3.9
       - store_artifacts:
           path: artifacts
           destination: ironbank_docker_images
