--- a/docker/pymisp2/Dockerfile
+++ b/docker/pymisp2/Dockerfile
@@ -3,6 +3,6 @@ FROM demisto/python3:3.9.6.22912
 
 COPY requirements.txt .
 
-RUN pip install --upgrade pip && apk --update add --no-cache --virtual .build-dependencies python3-dev \
- gcc linux-headers libc-dev libffi-dev\ build-base wget git \
- && pip install --no-cache-dir -r requirements.txt && apk del .build-dependencies
+RUN pip install --upgrade pip \
+ && apk --update add --no-cache --virtual .build-dependencies python3-dev gcc linux-headers libc-dev libffi-dev\
+ build-base wget git && pip install --no-cache-dir -r requirements.txt && apk del .build-dependencies
