--- a/docker/content-env/Dockerfile
+++ b/docker/content-env/Dockerfile
@@ -38,8 +38,7 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade && apt-get inst
     apt-transport-https \
     snapd \
     -y \
-    && python -m pip install --no-cache-dir -r requirements.txt \
-    # Docker cli, gsutil, gcloud, powershell, poetry tools installation
+    # Docker cli, gsutil, gcloud, poetry tools installation
     && echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" |  tee -a /etc/apt/sources.list.d/google-cloud-sdk.list \
     && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - \
     && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - \
