--- a/docker/pymisp2/Pipfile
+++ b/docker/pymisp2/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pymisp = {version = "2.4.135.3", extras = ["email"]}
+pymisp = "2.4.135"
 
 [dev-packages]
 
