--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -761,3 +761,7 @@ updates:
     directory: /docker/xsoar-tools-hf
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/armorblox
+    schedule:
+      interval: daily
