more linux deps

--- a/docker/content-env/Dockerfile
+++ b/docker/content-env/Dockerfile
@@ -1,11 +1,5 @@
 FROM python:3.10.5-bullseye
 
-
-ENV PATH /root/.pyenv/bin:/root/.local/bin:$PATH
-ENV PYENV_ROOT /root/.pyenv
-
-ARG PYTHON_VERSION 3.10.5
-
 # install zsh first
 RUN apt-get update && apt-get install -y zsh wget \
     && sh -c "$(wget -O- https://github.com/deluan/zsh-in-docker/releases/download/v1.1.2/zsh-in-docker.sh)" -- \
@@ -29,12 +23,24 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade && apt-get inst
     make \
     build-essential \
     python3-dev \
-    python2 \
+    python2-dev \
     libffi-dev \
     libssl-dev \
     software-properties-common \
     apt-transport-https \
-    snapd \
+    dpkg-dev \
+    gcc \
+    libbz2-dev \
+    libc6-dev \
+    libdb-dev \
+    libgdbm-dev \
+    libncursesw5-dev \
+    libreadline-dev \
+    libsqlite3-dev \
+    libssl-dev \
+    tk-dev \
+    xz-utils \
+    zlib1g-dev \
     -y \
     # Docker cli, gsutil, gcloud, poetry tools installation
     && echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" |  tee -a /etc/apt/sources.list.d/google-cloud-sdk.list \
@@ -45,6 +51,8 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade && apt-get inst
     && add-apt-repository "deb [arch=$(dpkg --print-architecture)] https://download.docker.com/linux/ubuntu bionic stable" \
     && apt-get update && apt-get install google-cloud-sdk docker-ce-cli -y \
     && curl -fSSL https://pyenv.run | bash \
+    && echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.zshrc \
+    && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.zshrc \
     && echo 'eval "$(pyenv init -)"' >> ~/.zshrc \
     && source ~/.zshrc \
     && python --version \
