CDS/add support for pycountry (#7855)
* add support for pycountry

* update python3 image to demisto/python3:3.10.4.31492

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -754,6 +754,10 @@ updates:
     schedule:
      interval: daily
   - package-ecosystem: pip
+    directory: /docker/pycountry
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
     directory: /docker/exodusintelligence
     schedule:
      interval: daily
