--- a/docker/sane-doc-reports/Dockerfile
+++ b/docker/sane-doc-reports/Dockerfile
@@ -1,14 +1,7 @@
 FROM demisto/python3-deb:3.10.14.98108
-
 WORKDIR "/app"
 
 SHELL ["/bin/bash", "-c"]
-
-# Set environment variables
-ENV DEBIAN_FRONTEND=noninteractive
-ENV NSS_VERSION=3_101_1
-
-# Install necessary packages including build dependencies
 RUN apt-get update -y -q && \
     apt-get install -y -q nodejs npm gconf-service \
     libasound2 libatk1.0-0 libatk-bridge2.0-0 \
@@ -23,40 +16,20 @@ RUN apt-get update -y -q && \
     libxrender1 libxss1 libxtst6 \
     ca-certificates fonts-liberation \
     libappindicator1 libnss3 lsb-release \
-    xdg-utils git mercurial ninja-build \
-    python3-pip autoconf libtool pkg-config make gcc g++ \
+    xdg-utils git \
     && rm -rf /var/lib/apt/lists/*
 
-# Install gyp-next
-RUN python3 -m pip install gyp-next
-
-# Clone and build NSS from source
-RUN git clone https://github.com/nss-dev/nss.git && \
-    git clone https://github.com/nss-dev/nspr.git && \
-    cd nss && \
-    git checkout NSS_${NSS_VERSION}_RTM && \
-    ./build.sh -o && \
-    cp -r dist /app/nss-dist
-
-# Install svgexport globally
 RUN npm install -g https://github.com/shakiba/svgexport#4c144c589050c039cbfc83a37d8e6d1f6f35bd27 --unsafe-perm=true
 
-# Copy requirements.txt and install Python dependencies
 COPY requirements.txt .
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
+  gcc \
   python3-dev \
 && pip install --no-cache-dir -r requirements.txt \
 && apt-get purge -y --auto-remove \
-  python3-dev \
-  make \
   gcc \
-  g++ \
-  autoconf \
-  libtool \
-  pkg-config \
   git \
-  mercurial \
   npm \
-&& rm -rf /var/lib/apt/lists/* /nss /nspr /app/nss-dist
-
+  python3-dev \
+&& rm -rf /var/lib/apt/lists/*
