--- a/docker/ml/Dockerfile
+++ b/docker/ml/Dockerfile
@@ -11,8 +11,8 @@ RUN unzip /distilled_bert_base_uncased_tokenizer.zip -d /ml \
   && rm /distilled_bert_base_uncased_tokenizer.zip \
   && chmod -R 775 /ml
 
-FROM demisto/python3-deb:3.10.10.49238
-ENV TRANSFORMERS_CACHE /ml/.cache
+FROM demisto/python3-deb:3.10.14.98108
+ENV HF_HOME /ml/.cache
 COPY Pipfile Pipfile
 COPY Pipfile.lock Pipfile.lock
 
