google-chat-image

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -751,3 +751,7 @@ updates:
     directory: /docker/keepercommander
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/google-chat
+    schedule:
+     interval: daily
