--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -1,4 +1,4 @@
-FROM devdemisto/python3-deb:3.11.9.92379
+FROM demisto/python3-deb:3.10.11.61745
 
 ENV NODE_VERSION 14.16.0
 ENV NVM_DIR /root/.nvm
