update `py3-tools-ubi` to 3.11 (#25902)
* update `py3-tools-ubi` to 3.11

* fix verify script

* fix verify script

* fix verify script

* avoid updating `paho.mqtt`

* lock `paho-mqtt`

* Update Dockerfile

* Update Dockerfile

* Update .github/dependabot.yml

Co-authored-by: Judah Schwartz <JudahSchwartz@users.noreply.github.com>

---------

Co-authored-by: Judah Schwartz <JudahSchwartz@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -587,6 +587,7 @@ updates:
     ignore:
       - dependency-name: "intezer-sdk"
       - dependency-name: "asana"  # lock on v3.2.1, BC in Higher version
+      - dependency-name: paho-mqtt
   - package-ecosystem: pip
     directory: /docker/pan-os-python
     schedule:
