--- a/docker/py3-tools-ubi/pyproject.toml
+++ b/docker/py3-tools-ubi/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "~3.10"
+python = "~3.11"
 cloudshare = "*"
 intezer-sdk = "==1.19.9"  # CIAC-10263
 emoji = "*"
@@ -21,8 +21,9 @@ beautifulsoup4 = "*"
 mail-parser = "*"
 imap-tools = "*"
 imapclient = "*"
+pyminizip = "*"
 pyjarm = "*"
-paho-mqtt = "*"
+paho-mqtt = "^1.6.1"
 arrow = "*"
 pytz = "*"
 python-dateutil = "*"
