--- a/docker/mlurlphishing/pyproject.toml
+++ b/docker/mlurlphishing/pyproject.toml
@@ -32,7 +32,7 @@ matplotlib = "==3.5.2"
 olefile = "==0.46"
 packaging = "==21.3"
 pandas = "==1.3.5"
-Pillow = "==9.1.1"
+Pillow = "^10.2.0"
 plotly = "==5.8.0"
 pyparsing = "==3.0.9"
 PySocks = "==1.7.1"
