--- a/docker/mlurlphishing/pyproject.toml
+++ b/docker/mlurlphishing/pyproject.toml
@@ -47,7 +47,7 @@ soupsieve = "==2.3.2.post1"
 tenacity = "==8.0.1"
 threadpoolctl = "==3.1.0"
 tzlocal = "==2.1"
-urllib3 = "==1.26.6"
+urllib3 = "^1.26.19"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
