--- a/docker/mlurlphishing/pyproject.toml
+++ b/docker/mlurlphishing/pyproject.toml
@@ -16,7 +16,7 @@ scipy = "==1.8.0"   # All dependencies listed below are frozen because we couldn
 NumPy = "==1.21.6"
 beautifulsoup4 = "==4.11.1"
 catboost = "==1.0.6"
-certifi = "==2023.07.22"
+certifi = "^2024.07.04"
 charset-normalizer = "==2.0.1"
 cycler = "==0.11.0"
 dateparser = "==1.0.0"
