--- a/docker/mlurlphishing/pyproject.toml
+++ b/docker/mlurlphishing/pyproject.toml
@@ -16,13 +16,13 @@ scipy = "==1.8.0"   # All dependencies listed below are frozen because we couldn
 NumPy = "==1.21.6"
 beautifulsoup4 = "==4.11.1"
 catboost = "==1.0.6"
-certifi = "^2024.07.04"
+certifi = "==2024.07.04"
 charset-normalizer = "==2.0.1"
 cycler = "==0.11.0"
 dateparser = "==1.0.0"
 dill = "==0.3.5.1"
 filelock = "==3.0.12"
-fonttools = "==4.33.3"
+fonttools = "==4.43.0"
 funcy = "==1.16"
 graphviz = "==0.20"
 idna = "==3.2"
@@ -32,7 +32,7 @@ matplotlib = "==3.5.2"
 olefile = "==0.46"
 packaging = "==21.3"
 pandas = "==1.3.5"
-Pillow = "^10.2.0"
+Pillow = "==10.2.0"
 plotly = "==5.8.0"
 pyparsing = "==3.0.9"
 PySocks = "==1.7.1"
@@ -47,7 +47,7 @@ soupsieve = "==2.3.2.post1"
 tenacity = "==8.0.1"
 threadpoolctl = "==3.1.0"
 tzlocal = "==2.1"
-urllib3 = "^1.26.19"
+urllib3 = "==1.26.19"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
