--- a/docker/readpdf/Dockerfile
+++ b/docker/readpdf/Dockerfile
@@ -5,5 +5,4 @@ COPY requirements.txt .
 RUN apt-get update && apt-get install -y --no-install-recommends poppler-utils python3-dev make gcc g++ && \
     pip install --no-cache-dir -r requirements.txt && \
     apt-get purge -y --auto-remove python3-dev make gcc g++ && \
-    rm -rf /var/lib/apt/lists/* && \
-    apt-get remove libnss3 -y
+    rm -rf /var/lib/apt/lists/*
