lock paho-mqtt = ^1.6.1

--- a/docker/py3-tools/pyproject.toml
+++ b/docker/py3-tools/pyproject.toml
@@ -23,7 +23,7 @@ imap-tools = "*"
 imapclient = "*"
 pyjarm = "*"
 pyzipper = "*"
-paho-mqtt = "*"
+paho-mqtt = "^1.6.1"
 arrow = "*"
 pytz = "*"
 python-dateutil = "*"
