[Native & py3ews] Update `exchangelib` to 5.4.1 (#28665)
* update exchangelib to 5.4.1

* revert lock file

* py3 native lock

* py3ews

--- a/docker/py3-native/pyproject.toml
+++ b/docker/py3-native/pyproject.toml
@@ -45,7 +45,7 @@ parse-emails = "*"
 slack-sdk = {extras = ["optional"], version = "*"}
 pyjwt = {extras = ["crypto"],version = "*"}
 google-api-python-client = "*"
-exchangelib = "<=5.0.3"
+exchangelib = ">=5.4.1"
 requests-oauthlib = "*"
 oauthlib = {extras = ["signedtoken"], version = "*"}
 requests-ntlm = "==1.1.0"
