--- a/docker/py3-tools-ubi/pyproject.toml
+++ b/docker/py3-tools-ubi/pyproject.toml
@@ -23,7 +23,7 @@ imap-tools = "*"
 imapclient = "*"
 pyminizip = "*"
 pyjarm = "*"
-paho-mqtt = "^1.6.1"
+paho-mqtt = "^1.6.1"  # breaking changes in v2
 arrow = "*"
 pytz = "*"
 python-dateutil = "*"
