--- a/docker/auth-utils/Dockerfile
+++ b/docker/auth-utils/Dockerfile
@@ -7,5 +7,5 @@ RUN apk --update add --no-cache krb5 krb5-libs
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev libffi-dev gcc build-base wget git \
   openssl-dev krb5-dev \
   && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-dependencies
+  && apk del .build-dependencies --exclude openssl-dev
 
