--- a/docker/aquatone/Dockerfile
+++ b/docker/aquatone/Dockerfile
@@ -1,4 +1,5 @@
 # Last modified: 2024-07-11T00:50:18.895800+00:00
+FROM ruby:3.2.4-slim-bullseye as ruby
 FROM demisto/python3-deb:3.11.9.103065
 
 RUN apt-get update \
