--- a/docker/powershell/Dockerfile
+++ b/docker/powershell/Dockerfile
@@ -1,5 +1,5 @@
 # Last modified: 2024-07-14T00:12:45.520896+00:00
-FROM mcr.microsoft.com/powershell:preview-7.5-alpine-3.17
+FROM mcr.microsoft.com/powershell:7.4-alpine-3.17
 
 # Set timezone to Etc/UTC for backwards comp
 RUN cp /usr/share/zoneinfo/Etc/UTC /etc/localtime
