--- a/docker/aquatone/Dockerfile
+++ b/docker/aquatone/Dockerfile
@@ -1,5 +1,4 @@
 # Last modified: 2024-07-11T00:50:18.895800+00:00
-FROM ruby:3.2.4-slim-bullseye as ruby
 FROM demisto/python3-deb:3.11.9.103065
 
 RUN apt-get update \
@@ -12,5 +11,5 @@ RUN apt-get update \
     build-essential \
     ruby-dev \
     rubygems \
-&& rm -rf /var/lib/apt/lists/* \
-&& apt-get upgrade -y
+&& apt remove ruby \
+&& rm -rf /var/lib/apt/lists/*
