lock scikit-learn 1.1.2

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -455,6 +455,8 @@ updates:
     directory: /docker/mlclustering
     schedule:
       interval: daily
+    ignore:
+      - dependency-name: scikit-learn
   - package-ecosystem: pip
     directory: /docker/stix
     schedule:
