--- a/docker/mlclustering/Dockerfile
+++ b/docker/mlclustering/Dockerfile
@@ -1,4 +1,22 @@
-FROM demisto/python3-deb:3.9.6.24067
+FROM python:3.9.19-slim-bullseye
+
+RUN echo 'deb http://deb.debian.org/debian bullseye-backports main' >> /etc/apt/sources.list
+
+# Basic linux utilities
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  procps \
+&& rm -rf /var/lib/apt/lists/*
+
+# Upgrade all packages to latest
+RUN apt-get update && apt-get -y --no-install-recommends upgrade \
+&& rm -rf /var/lib/apt/lists/*
+
+# Upgrade using backports
+RUN apt-get update && apt-get -t bullseye-backports -y --no-install-recommends upgrade \
+&& rm -rf /var/lib/apt/lists/*
+
+RUN groupadd --gid 4000 demisto \
+  && useradd --uid 4000 --gid demisto --shell /bin/bash --create-home demisto
 
 COPY requirements.txt .
 
