--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -754,3 +754,7 @@ updates:
     directory: /docker/keepercommander
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/python3-9-deb
+    schedule:
+     interval: daily
