--- a/.github/workflows/sync_native_dependency.yml
+++ b/.github/workflows/sync_native_dependency.yml
@@ -18,15 +18,16 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.11"
+      - name: Install dependencies with pipenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pipenv install
       - name: Run compare_dependency_constraints Script.
         env:
           CHANGED_FILES: "${{ steps.changed-files.outputs.all_changed_files }}"
         run: |
           echo "==== $(date): Starting environment setup... ===="
-          python -m pip install --upgrade pip
-          pipenv install
-          pipenv shell
-          pwd
           cd "$GITHUB_WORKSPACE/utils/"
           echo "==== $(date): Running validator... ===="
           echo "==== $(date): Running chceking Native dependency ===="
