--- a/.github/workflows/sync_native_dependency.yml
+++ b/.github/workflows/sync_native_dependency.yml
@@ -9,8 +9,6 @@ jobs:
     if: github.repository == 'demisto/dockerFiles'
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v41
@@ -30,4 +28,4 @@ jobs:
           cd "$GITHUB_WORKSPACE/utils/"
           pipenv install
           echo "==== $(date): Running chceking Native dependency ===="
-          pipenv run ./compare_dependency_constraints.py
+          pipenv run compare_dependency_constraints.py
