update intezer-sdk to 1.21.3

--- a/docker/py3-tools-ubi/pyproject.toml
+++ b/docker/py3-tools-ubi/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.11"
 cloudshare = "*"
-intezer-sdk = "==1.19.9"  # CIAC-10263
+intezer-sdk = ">=1.21.3" # CIAC-10263
 emoji = "*"
 exifread = "*"
 "stomp.py" = "*"
