--- a/.github/workflows/sync_native_dependency.yml
+++ b/.github/workflows/sync_native_dependency.yml
@@ -20,7 +20,8 @@ jobs:
           pipenv install
       - name: Run compare_dependency_constraints Script.
         run: |
+          ls
           echo "==== $(date): Starting environment setup... ===="
-          cd "$GITHUB_WORKSPACE/utils/"
+          cd "$GITHUB_WORKSPACE"
           echo "==== $(date): Running chceking Native dependency ===="
-          pipenv run python compare_dependency_constraints.py
+          pipenv run python utils/compare_dependency_constraints.py
