--- a/docker/py3-tools-ubi/pyproject.toml
+++ b/docker/py3-tools-ubi/pyproject.toml
@@ -51,6 +51,7 @@ pycryptodome = "*"
 requests-toolbelt = "*"
 certifi = "*"
 pyzipper = "*"
+setuptools = "70.0.0"
 
 [build-system]
 requires = ["poetry-core"]
