--- a/docker/tidy/Pipfile
+++ b/docker/tidy/Pipfile
@@ -18,7 +18,7 @@ pywinrm = "*"
 ansible = "*"
 cffi = "*"
 jinja2-ansible-filters = "*"
-setuptools = "*"
+setuptools = "70.3.0"
 
 [dev-packages]
 
