--- a/docker/mlclustering/Pipfile
+++ b/docker/mlclustering/Pipfile
@@ -10,7 +10,7 @@ pandas = "*"
 numpy = "*"
 hdbscan = "*"
 scikit-learn = "==0.24.1"
-dill = "*"
+dill = "==0.3.3"
 
 [requires]
 python_version = "3.9"
