--- a/docker/mlclustering/Pipfile
+++ b/docker/mlclustering/Pipfile
@@ -6,11 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pandas = "*"
+pandas = "==1.2.4"
 numpy = "*"
-hdbscan = "*"
+hdbscan = "==0.8.27"
 scikit-learn = "==0.24.1"
-dill = "==0.3.3"
+dill = "*"
 
 [requires]
 python_version = "3.9"
