--- a/docker/python3-ubi/Pipfile
+++ b/docker/python3-ubi/Pipfile
@@ -16,6 +16,7 @@ tldextract = "*"
 more-itertools = "*"
 defusedxml = "*"
 pydantic = ">=2.7.1"
+setuptools=">=70.3.0"
 
 [requires]
 python_version = "3.11"
