--- a/docker/mlclustering/Pipfile
+++ b/docker/mlclustering/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 pandas = "==1.2.4"
 numpy = "*"
-hdbscan = "==0.8.27"
+hdbscan = "*"
 scikit-learn = "==0.24.1"
 dill = "*"
 
