--- a/docker/mlclustering/Pipfile
+++ b/docker/mlclustering/Pipfile
@@ -7,8 +7,8 @@ verify_ssl = true
 
 [packages]
 pandas = "==1.2.4"
-numpy = "*"
-hdbscan = "*"
+numpy = "==1.20.2"
+hdbscan = "==0.8.27"
 scikit-learn = "==0.24.1"
 dill = "*"
 
