--- a/docker/python3-9-deb/Dockerfile
+++ b/docker/python3-9-deb/Dockerfile
@@ -23,10 +23,12 @@ COPY requirements.txt .
 RUN apt-get update && apt-get install -y --no-install-recommends \
   gcc \
   python3-dev \ 
+  build-essential \
 && pip install --no-cache-dir -r requirements.txt \
 && apt-get purge -y --auto-remove \
   gcc \
   python3-dev \
+  build-essential \
 && rm -rf /var/lib/apt/lists/*
 
 
