--- a/docker/python3/Pipfile
+++ b/docker/python3/Pipfile
@@ -15,6 +15,6 @@ funcy = "*"
 tldextract = "*"
 more-itertools = "*"
 defusedxml = "*"
-setuptools="*"
+setuptools="70.3.0"
 [requires]
 python_version = "3.11"
