--- a/docker/cyberchef/Dockerfile
+++ b/docker/cyberchef/Dockerfile
@@ -11,4 +11,4 @@ RUN apk add --update --no-cache nodejs npm git
 RUN git init \
   && git remote add origin https://github.com/gchq/CyberChef-server.git \
   && git pull origin v0.0.9 \
-  && npm cache clean --force && npm install
+  && npm cache clean --force && npm install && npm audit fix
