--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -9,9 +9,9 @@ ENV APOC_CONF_FILE /etc/neo4j/apoc.conf
 # Currently sh is linked to dash, linking it to /bin/bash instead.
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh && cat ~/.profile >> /etc/.profile
 
-RUN sudo apt-get install software-properties-common \
+RUN    apt-get install software-properties-common \
     && add-apt-repository ppa:git-core/ppa -y \
-    && sudo apt-get remove --purge software-properties-common
+    && apt-get remove --purge software-properties-common
 
 RUN apt-get update
 RUN apt-get upgrade -y
