--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -10,9 +10,9 @@ ENV APOC_CONF_FILE /etc/neo4j/apoc.conf
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh && cat ~/.profile >> /etc/.profile
 
 RUN apt-get update
-RUN    apt-get install software-properties-common \
-    && add-apt-repository ppa:git-core/ppa -y \
-    && apt-get remove --purge software-properties-common -y
+RUN apt-get install software-properties-common 
+RUN add-apt-repository ppa:git-core/ppa -y 
+RUN apt-get remove --purge software-properties-common -y
 
 RUN apt-get update
 RUN apt-get upgrade -y
