--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -10,7 +10,7 @@ ENV APOC_CONF_FILE /etc/neo4j/apoc.conf
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh && cat ~/.profile >> /etc/.profile
 
 RUN apt-get update
-RUN apt-get install software-properties-common 
+RUN apt-get install software-properties-common -y
 RUN add-apt-repository ppa:git-core/ppa -y 
 RUN apt-get remove --purge software-properties-common -y
 
