--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -17,7 +17,7 @@ RUN curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash 
     && nvm install $NODE_VERSION \
     && nvm alias default $NODE_VERSION \
     && nvm use default \
-    && git --version 
+    && alias git='/nix/var/nix/profiles/default/bin/git' && git --version 
     # git --version verifies git is installed. To avoid two instances of git, we do not `apt-get install git`.
 
 # Installing the gsutil cli
