Update scripts with default value and add magic

--- a/docker/cyberchef/Dockerfile
+++ b/docker/cyberchef/Dockerfile
@@ -2,6 +2,7 @@ FROM demisto/python3:3.11.9.103066
 
 COPY requirements.txt .
 COPY bake.js /bake.js
+COPY magic.js /magic.js
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
