--- a/docker/mlclustering/Dockerfile
+++ b/docker/mlclustering/Dockerfile
@@ -1,11 +1,13 @@
 FROM devdemisto/python3-9-deb:3.9.16.103723
 
-COPY requirements.txt .
+COPY pyproject.toml .
+COPY poetry.lock .
 
 RUN apt-get update \
 && apt-get install -y --no-install-recommends \
   gcc \
   python3-dev gfortran wget git g++ pkg-config libhdf5-dev \
-&& pip install --no-cache-dir -r requirements.txt \
+RUN pip install poetry && poetry export -f requirements.txt --output requirements.txt --without-hashes \
+&& pip install --no-binary :all: --no-cache-dir -r requirements.txt \
 && apt-get purge -y --auto-remove gcc \
   python3-dev gfortran wget git g++ pkg-config libhdf5-dev
