--- a/docker/mlclustering/Dockerfile
+++ b/docker/mlclustering/Dockerfile
@@ -6,7 +6,7 @@ COPY poetry.lock .
 RUN apt-get update \
 && apt-get install -y --no-install-recommends \
   gcc \
-  python3-dev gfortran wget git g++ pkg-config libhdf5-dev \
+  python3-dev gfortran wget git g++ pkg-config libhdf5-dev build-essentials python3-dev \
 RUN pip install poetry && poetry export -f requirements.txt --output requirements.txt --without-hashes \
 && pip install --no-binary :all: --no-cache-dir -r requirements.txt \
 && apt-get purge -y --auto-remove gcc \
