--- a/docker/mlclustering/Dockerfile
+++ b/docker/mlclustering/Dockerfile
@@ -1,10 +1,10 @@
-FROM devdemisto/python3-9-deb:3.9.16.103723
+FROM demisto/python3-9-deb:3.9.16.103780
 
 #COPY requirements.txt .
 COPY environment.yml .
 ADD https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh minicondainstall.sh
 RUN chmod +x minicondainstall.sh && ./minicondainstall.sh -b -u -p ~/miniconda3
-ENV PATH=/miniconda3/bin:${PATH}
+ENV PATH=~/miniconda3/bin:${PATH}
 RUN conda --version \
 && apt-get update \
 && apt-get install -y --no-install-recommends pipenv build-essential \
