--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -755,6 +755,10 @@ updates:
     schedule:
      interval: daily
   - package-ecosystem: pip
+    directory: /docker/python3-9-deb
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
     directory: /docker/cyberchef
     schedule:
      interval: daily
